# chatbot_whatsapp_com_selenium

./: Chatbot_whatsapp_com_selenium.ipynb  README.md  app.py  pyproject.toml
wpp/: DevToolsActivePort  Local State  first_party_sets.db
wpp/CertificateRevocation/8561/: crl-set  manifest.fingerprint  manifest.json
wpp/Default/: BrowsingTopicsState  DIPS  Favicons  History  History-journal  MediaDeviceSalts  Preferences  Secure Preferences  Visited Links  Web Data
wpp/Default/DawnCache/: data_1  index
wpp/Default/Extension Rules/: LOG
wpp/Default/Extension Scripts/: LOG
wpp/Default/Extension State/: LOG  LOG.old
wpp/Default/GPUCache/: data_0  data_1  data_2  index
wpp/Default/Network/: Network Persistent State  Reporting and NEL  TransportSecurity
wpp/Default/Session Storage/: LOG  LOG.old
wpp/Default/Sessions/: Session_13353052716654060  Session_13353052851119820  Session_13353054163823544  (+7 more)
wpp/GrShaderCache/: data_0  data_1  f_000001  f_000005  f_000006  f_000008  f_000009  f_00000a  f_00000c  f_00000d  f_00000e  f_000010  f_000011  f_000012  f_000013  f_000014  f_000016  f_000017  f_000018  f_000019  f_00001a  index
wpp/GraphiteDawnCache/: data_1  index
wpp/ShaderCache/: data_1  index
wpp/component_crx_cache/: hfnkpimlhhgieaddgfemjhofmfblmnib_1.00fa7d95202e7c608bbb939b2b77ffc0a19ca06719048dcbde8caf19a58d3ebd  jflhchccmppkfebkiaminageehmchikm_1.94b8a51eb078298283bcc90c1930d2207f263431522df89385d05d4271dc11fa  niikhdgajlphfehepabhhblakbdgeefj_1.630414f6b053d4455bba45e07513742a8bfc72e591f3a010f0e636a83df4eed7
wpp/segmentation_platform/: ukm_db
(+350 files in other folders)
